Wed Oct 19 14:10:29 UTC 2005 / Arnaud Quette <aquette.dev@gmail.com>

 - debian/: more update (still draft) to prepare 2.0.2-2 release

 - nitram: new driver for Nitram Elite 2005, and probably some
   recent Cyberpower units

   (Olivier Albiez)

Mon Oct 10 20:15:24 UTC 2005 / Arnaud Quette <aquette.dev@gmail.com>

 - driver.list: add Eltek AL175 alarm module (Kirill Smelkov)
 
Sun Oct  9 05:31:09 UTC 2005 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups: repaired the way status flags are stored. Note that
   there can be more than one device status flag (such as "lowbatt"
   and "shutdownimm") mapped to the same NUT status (such as "LB").
   We now store the device flags, and convert them to NUT values only
   on request. This solves the problem where multiple variables (e.g.
   "lowbatt" and "shutdownimm") might have erased each other's values
   if one was set and the other was not. This also solves the issue
   reported by Alfred Ganz of the CHRG and DISCHRG flags not being
   cleared properly.

 - newhidups: added NUT status flags OVERHEAT, COMMFAULT, DEPLETED;
   these already exist in the belkinunv driver.

 - newhidups/Belkin: changed the way the OL/OB status is determined;
   now correctly shows OB during battery test (even when AC power is
   present).

Sun Oct  9 02:40:25 UTC 2005 / Peter Selinger <selinger@users.sourceforge.net>

  - libhid.c: added some missing usages from UPS/HID definition

Sat Oct  8 20:57:14 UTC 2005 / Arnaud Quette <aquette.dev@gmail.com>

  - debian/: bring the files in sync, and prepare 2.0.2-2 release.
  - al175: new driver for Eltek AL175 alarm module (Kirill Smelkov)

Tue Oct  4 03:29:19 UTC 2005 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups/APC and Belkin: fixed declarations of string length of
   writable variables. Also made ups.beeper.status writable in both
   subdrivers. Note: currently the written value must be numeric