@@ -1,0 +1,28 @@
+/*  generic-hid.h - this is a "stub" subdriver used to collect data
+ *  about HID UPS systems that are not yet supported.
+ *
+ *  This program is free software; you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation; either version 2 of the License, or
+ *  (at your option) any later version.
+ *
+ *  This program is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
+ *
+ *
+ *  You should have received a copy of the GNU General Public License
+ *  along with this program; if not, write to the Free Software
+ *  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
+ *
+ */
+
+#ifndef GENERIC_HID_H
+#define GENERIC_HID_H
+
+#include "newhidups.h"
+
+extern subdriver_t generic_subdriver;
+
+#endif /* GENERIC_HID_H */
